--- a/package.json
+++ b/package.json
@@ -1,111 +1,114 @@
 {
-    "name": "petshop",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint",
-        "electron:build": "vue-cli-service electron:build",
-        "electron:serve": "vue-cli-service electron:serve",
-        "postinstall": "electron-builder install-app-deps",
-        "postuninstall": "electron-builder install-app-deps"
+  "name": "petshop",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
+  },
+  "main": "background.js",
+  "dependencies": {
+    "@caohenghu/vue-colorpicker": "1.2.4",
+    "@chenfengyuan/vue-countdown": "1.1.5",
+    "@electron/osx-sign": "^1.0.1",
+    "@electron/remote": "^2.0.8",
+    "@fortawesome/fontawesome-free": "5.15.1",
+    "@fullcalendar/bootstrap": "4.4.2",
+    "@fullcalendar/core": "4.4.2",
+    "@fullcalendar/daygrid": "4.4.2",
+    "@fullcalendar/interaction": "4.4.2",
+    "@fullcalendar/list": "4.4.2",
+    "@fullcalendar/timegrid": "4.4.2",
+    "@fullcalendar/vue": "4.4.2",
+    "@popperjs/core": "2.11.6",
+    "alertifyjs": "1.13.1",
+    "apexcharts": "3.19.2",
+    "axios": "0.21.4",
+    "beautify-scrollbar": "1.0.8",
+    "bootbox": "5.5.3",
+    "bootstrap": "4.6.2",
+    "bootstrap-select": "1.13.18",
+    "bootstrap-vue": "2.15.0",
+    "bootswatch": "4.6.2",
+    "chart.js": "2.9.4",
+    "core-js": "^3.25.5",
+    "dayjs": "1.9.8",
+    "electron-modal": "1.0.0",
+    "electron-pdf-viewer": "^1.0.1",
+    "electron-pdf-window": "^1.0.12",
+    "file-saver": "2.0.5",
+    "jquery": "3.6.1",
+    "moment": "2.29.4",
+    "node-sass": "7.0.3",
+    "pdfjs-dist": "2.7.570",
+    "postcss-loader": "^7.0.1",
+    "roboto-fontface": "*",
+    "sass-loader": "^10.1.1",
+    "v-lazy": "0.9.5",
+    "v-photoswipe": "1.0.3-1",
+    "v2-lazy-list": "2.2.5",
+    "vue": "2.6.10",
+    "vue-apexcharts": "1.5.3",
+    "vue-bootstrap-typeahead": "0.2.6",
+    "vue-chartjs": "3.5.0",
+    "vue-custom-scrollbar": "1.2.0",
+    "vue-hljs": "1.1.2",
+    "vue-ins-progress-bar": "1.3.0",
+    "vue-js-modal": "2.0.0-rc.6",
+    "vue-maskedinput": "0.1.3",
+    "vue-notification": "1.3.20",
+    "vue-pdf": "4.2.0",
+    "vue-router": "3.3.1",
+    "vue-scroll-loader": "2.2.0",
+    "vue-wysiwyg": "1.7.2",
+    "vue2-daterange-picker": "0.5.1",
+    "vue2-google-maps": "0.10.7",
+    "vuejs-datepicker": "1.6.2",
+    "vuex": "3.4.0",
+    "vuex-electron": "1.0.3",
+    "xlsx": "0.16.8"
+  },
+  "devDependencies": {
+    "@babel/core": "7.19.3",
+    "@babel/eslint-parser": "7.19.1",
+    "@vue/cli-plugin-babel": "4.4.0",
+    "@vue/cli-plugin-eslint": "4.4.0",
+    "@vue/cli-plugin-vuex": "4.5.8",
+    "@vue/cli-service": "4.4.0",
+    "babel-eslint": "10.1.0",
+    "electron": "21.1.0",
+    "electron-devtools-installer": "3.2.0",
+    "eslint": "7.32.0",
+    "eslint-plugin-vue": "9.6.0",
+    "node-fetch": "2.6.1",
+    "node-gyp": "9.2.0",
+    "sass": "1.55.0",
+    "vue-cli-plugin-electron-builder": "~2.1.1",
+    "vue-template-compiler": "2.6.10",
+    "vuex-electron": "1.0.3"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
     },
-    "main": "src/background.js",
-    "dependencies": {
-        "@caohenghu/vue-colorpicker": "1.2.4",
-        "@chenfengyuan/vue-countdown": "1.1.5",
-        "@fortawesome/fontawesome-free": "5.15.1",
-        "@fullcalendar/bootstrap": "4.4.2",
-        "@fullcalendar/core": "4.4.2",
-        "@fullcalendar/daygrid": "4.4.2",
-        "@fullcalendar/interaction": "4.4.2",
-        "@fullcalendar/list": "4.4.2",
-        "@fullcalendar/timegrid": "4.4.2",
-        "@fullcalendar/vue": "4.4.2",
-        "@popperjs/core": "2.11.6",
-        "alertifyjs": "1.13.1",
-        "apexcharts": "3.19.2",
-        "axios": "0.21.4",
-        "beautify-scrollbar": "1.0.8",
-        "bootbox": "5.5.3",
-        "bootstrap": "4.6.2",
-        "bootstrap-select": "1.13.18",
-        "bootstrap-vue": "2.15.0",
-        "bootswatch": "4.6.2",
-        "chart.js": "2.9.4",
-        "core-js": "^3.25.5",
-        "dayjs": "1.9.8",
-        "electron-modal": "1.0.0",
-        "electron-pdf-window": "1.0.12",
-        "file-saver": "2.0.5",
-        "jquery": "3.6.1",
-        "moment": "2.29.4",
-        "node-sass": "7.0.3",
-        "pdfjs-dist": "2.7.570",
-        "postcss-loader": "^7.0.1",
-        "roboto-fontface": "*",
-        "sass-loader": "^10.1.1",
-        "v-lazy": "0.9.5",
-        "v-photoswipe": "1.0.3-1",
-        "v2-lazy-list": "2.2.5",
-        "vue": "2.6.10",
-        "vue-apexcharts": "1.5.3",
-        "vue-bootstrap-typeahead": "0.2.6",
-        "vue-chartjs": "3.5.0",
-        "vue-custom-scrollbar": "1.2.0",
-        "vue-hljs": "1.1.2",
-        "vue-ins-progress-bar": "1.3.0",
-        "vue-js-modal": "2.0.0-rc.6",
-        "vue-maskedinput": "0.1.3",
-        "vue-notification": "1.3.20",
-        "vue-pdf": "4.2.0",
-        "vue-router": "3.3.1",
-        "vue-scroll-loader": "2.2.0",
-        "vue-wysiwyg": "1.7.2",
-        "vue2-daterange-picker": "0.5.1",
-        "vue2-google-maps": "0.10.7",
-        "vuejs-datepicker": "1.6.2",
-        "vuex": "3.4.0",
-        "vuex-electron": "1.0.3",
-        "xlsx": "0.16.8"
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
     },
-    "devDependencies": {
-        "@babel/core": "7.19.3",
-        "@babel/eslint-parser": "7.19.1",
-        "@vue/cli-plugin-babel": "4.40",
-        "@vue/cli-plugin-eslint": "4.4.0",
-        "@vue/cli-plugin-vuex": "4.5.8",
-        "@vue/cli-service": "4.4.0",
-        "babel-eslint": "10.1.0",
-        "electron": "21.1.0",
-        "electron-devtools-installer": "3.2.0",
-        "eslint": "7.32.0",
-        "eslint-plugin-vue": "9.6.0",
-        "node-fetch": "2.6.1",
-        "node-gyp": "9.2.0",
-        "sass": "1.55.0",
-        "vue-cli-plugin-electron-builder": "2.1.1",
-        "vue-template-compiler": "2.6.10",
-        "vuex-electron": "1.0.3"
-    },
-    "eslintConfig": {
-        "root": true,
-        "env": {
-            "node": true
-        },
-        "extends": [
-            "plugin:vue/essential",
-            "eslint:recommended"
-        ],
-        "parserOptions": {
-            "parser": "babel-eslint"
-        },
-        "rules": {}
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions",
-        "not dead"
-    ]
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
