--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
+    "electron:build-win": "vue-cli-service electron:build --windows",
+    "build:win": "vue-cli-service electron:build --windows",
+    "build:linux": "vue-cli-service electron:build --linux",
+    "build:mac": "vue-cli-service electron:build --mac",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
@@ -88,7 +92,8 @@
     "node-fetch": "2.6.1",
     "node-gyp": "9.2.0",
     "sass": "1.55.0",
-    "vue-cli-plugin-electron-builder": "~2.1.1",
+    "vue-cli-plugin-electron-builder": "2.1.1",
+    "electron-builder": "23.0.2",
     "vue-template-compiler": "2.6.10",
     "vuex-electron": "1.0.3"
   },
